Updated portfolio design: improved skills, experience, projects, achievements, and contact section

--- a/index.html
+++ b/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prem Prakash | Portfolio</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-
-</head>
-<body>
-
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
+  </head>
+  <body>
     <!-- HEADER -->
     <!-- <header>
         <nav>
@@ -31,7 +32,7 @@
 
             <ul class="nav-links">
                 <li><a href="#about">About</a></li> -->
-                <!-- <li><a href="#skills">Skills</a></li>
+    <!-- <li><a href="#skills">Skills</a></li>
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#achievements">Achievements & Leadership</a></li>
@@ -40,142 +41,288 @@
         </nav>
     </header> -->
     <header id="main-header">
-    <nav>
+      <nav>
         <div class="social-icons">
-            <a href="https://www.linkedin.com/in/prem-prakash-910a8a244/" target="_blank" class="icon linkedin">
-                <i class="fa-brands fa-linkedin-in"></i>
-            </a>
-            <a href="https://github.com/Prem-123Prakash" target="_blank" class="icon github">
-                <i class="fa-brands fa-github"></i>
-            </a>
-            <a href="https://www.geeksforgeeks.org/user/prempraka2jtg/" target="_blank" class="icon gfg">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/4/43/GeeksforGeeks.svg" alt="GFG" class="gfg-icon">
-            </a>
+          <a
+            href="https://www.linkedin.com/in/prem-prakash-910a8a244/"
+            target="_blank"
+            class="icon linkedin"
+          >
+            <i class="fa-brands fa-linkedin-in"></i>
+          </a>
+          <a
+            href="https://github.com/Prem-123Prakash"
+            target="_blank"
+            class="icon github"
+          >
+            <i class="fa-brands fa-github"></i>
+          </a>
+          <a
+            href="https://www.geeksforgeeks.org/user/prempraka2jtg/"
+            target="_blank"
+            class="icon gfg"
+          >
+            <img
+              src="https://upload.wikimedia.org/wikipedia/commons/4/43/GeeksforGeeks.svg"
+              alt="GFG"
+              class="gfg-icon"
+            />
+          </a>
         </div>
         <ul class="nav-links">
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#achievements">Achievements & Leadership</a></li>
-            <li><a href="#contact">Contact</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#education">Education</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#experience">Experience</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#achievements">Achievements & Leadership</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
-    </nav>
-</header>
-
-
-
-
-
-
-
-
-
+      </nav>
+    </header>
 
     <!-- ABOUT -->
     <section id="about" class="section">
-        <div class="about-container" data-aos="fade-up">
-            <img src="image/profile_image.jpeg" alt="Prem Prakash" class="profile-img">
+      <div class="about-container" data-aos="fade-up">
+        <img
+          src="image/profile_image.jpeg"
+          alt="Prem Prakash"
+          class="profile-img"
+        />
 
-            <!-- <img src="images/profile.jpg" alt="Prem Prakash" class="profile-img"> -->
-            <div>
-                <h1>Prem Prakash</h1>
-                <h3><span id="typed"></span></h3>
-                <p>I’m Prem Prakash, a passionate B.Tech Computer Science & Engineering (Data Science) student at Haldia Institute of Technology with a proven track record in Software Development, Artificial Intelligence, Machine Learning, and Business Intelligence. My journey blends academic excellence (CGPA 8.94) with hands-on experience through impactful internships at RedSeer Strategy Consulting, Sabudh Foundation, and Miles Education, where I delivered projects in predictive modeling, automation, dashboard development, and quality assurance.
-
-💡 Skilled in Python, Machine Learning, Deep Learning, NLP, Power BI, Tableau, OpenCV, TensorFlow, MySQL, and Django, I have a solid foundation in OOPS, DBMS, and Data Structures & Algorithms. My work includes solutions like a Smart Traffic Management System (95% vehicle detection accuracy) and a Punjabi Language Text-to-Speech system, along with 10+ interactive dashboards for corporate clients.
-
-Beyond academics, I contribute as a Placement Coordinator and Technical Member of the Data Science Club, leading workshops, training sessions, and placement drives that have impacted hundreds of students. I hold a 5⭐ Python rating on HackerRank, have research papers under review, and have solved 300+ DSA problems on GeeksforGeeks.
-
-Curiosity, innovation, and collaboration drive my work. I’m always ready to explore opportunities in Software Engineering, AI, Data Science, and Analytics to create real-world impact.</p>
-                <h3>Education</h3>
-                <p>B.Tech in Computer Science and Engineering(Data Science), CGPA: 8.94</p>
-            </div>
+        <!-- <img src="images/profile.jpg" alt="Prem Prakash" class="profile-img"> -->
+        <div>
+          <h1>Prem Prakash</h1>
+          <h3><span id="typed"></span></h3>
+          <p>
+            I’m Prem Prakash, a passionate B.Tech Computer Science & Engineering
+            (Data Science) student at Haldia Institute of Technology with a
+            proven track record in Software Development, Artificial
+            Intelligence, Machine Learning, and Business Intelligence. My
+            journey blends academic excellence (CGPA 8.94) with hands-on
+            experience through impactful internships at RedSeer Strategy
+            Consulting, Sabudh Foundation, and Miles Education, where I
+            delivered projects in predictive modeling, automation, dashboard
+            development, and quality assurance. 💡 Skilled in Python, Machine
+            Learning, Deep Learning, NLP, Power BI, Tableau, OpenCV, TensorFlow,
+            MySQL, and Django, I have a solid foundation in OOPS, DBMS, and Data
+            Structures & Algorithms. My work includes solutions like a Smart
+            Traffic Management System (95% vehicle detection accuracy) and a
+            Punjabi Language Text-to-Speech system, along with 10+ interactive
+            dashboards for corporate clients. Beyond academics, I contribute as
+            a Placement Coordinator and Technical Member of the Data Science
+            Club, leading workshops, training sessions, and placement drives
+            that have impacted hundreds of students. I hold a 5⭐ Python rating
+            on HackerRank, have research papers under review, and have solved
+            300+ DSA problems on GeeksforGeeks. Curiosity, innovation, and
+            collaboration drive my work. I’m always ready to explore
+            opportunities in Software Engineering, AI, Data Science, and
+            Analytics to create real-world impact.
+          </p>
+          <!-- <h3>Education</h3>
+                <p>B.Tech in Computer Science and Engineering(Data Science), CGPA: 8.94</p> -->
         </div>
+      </div>
+    </section>
+
+    <!-- EDUCATION -->
+    <section id="education" class="section">
+      <div class="about-edu" data-aos="fade-up">
+        <h3>🎓 Education</h3>
+        <div class="timeline">
+          <div class="timeline-item">
+            <div class="timeline-icon">🎓</div>
+            <div class="timeline-content">
+              <h4>B.Tech in Computer Science & Engineering (Data Science)</h4>
+              <p><strong>Haldia Institute of Technology</strong></p>
+              <p>CGPA: <b>8.94</b> | 2021 – 2025</p>
+            </div>
+          </div>
+
+          <div class="timeline-item">
+            <div class="timeline-icon">🏫</div>
+            <div class="timeline-content">
+              <h4>Higher Secondary (12th)</h4>
+              <p><strong>Samastipur College, Samastipur</strong></p>
+              <p>Percentage: <b>71.40%</b> | 2018 – 2020</p>
+            </div>
+          </div>
+
+          <div class="timeline-item">
+            <div class="timeline-icon">📘</div>
+            <div class="timeline-content">
+              <h4>Secondary (10th)</h4>
+              <p><strong>H/S Warisnagar, Warisnagar</strong></p>
+              <p>Percentage: <b>71.20%</b> | 2018</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- SKILLS -->
     <section id="skills" class="section" data-aos="fade-up">
-        <h2>Skills</h2>
-        <div class="skills-grid">
-            <span>Python</span>
-            <span>Java</span>
-            <span>MySQL</span>
-            <span>Tableau</span>
-            <span>Power BI</span>
-            <span>Machine Learning</span>
-            <span>Deep Learning</span>
-            <span>NLP</span>
-            <span>Django</span>
-            <span>GitHub</span>
-        </div>
+      <h2>Skills</h2>
+      <div class="skills-grid">
+        <span>Python</span>
+        <span>Java</span>
+        <span>MySQL</span>
+        <span>Tableau</span>
+        <span>Power BI</span>
+        <span>Machine Learning</span>
+        <span>Deep Learning</span>
+        <span>NLP</span>
+        <span>Django</span>
+        <span>GitHub</span>
+      </div>
     </section>
 
     <!-- EXPERIENCE -->
     <section id="experience" class="section" data-aos="fade-up">
-        <h2>Experience</h2>
-        <div class="timeline">
-            <div class="timeline-item">
-                <h3>Miles Education | QA Intern</h3>
-                <p>Apr 2025 – Jul 2025</p>
-                <p>Manual testing, bug reporting, and API validation.</p>
-            </div>
-            <div class="timeline-item">
-                <h3>RedSeer | Research Analyst Intern</h3>
-                <p>Oct 2024 – Jan 2025</p>
-                <p>Created Power BI dashboards and optimized workflows.</p>
-            </div>
-            <div class="timeline-item">
-                <h3>Sabudh Foundation | Data Science Intern</h3>
-                <p>Jul 2024 – Dec 2024</p>
-                <p>Built ML models, automated pipelines, and EDA visualizations.</p>
-            </div>
+      <h2>Experience</h2>
+      <div class="exp-timeline">
+        <div class="exp-item">
+          <h3>Miles Education | QA Intern</h3>
+          <p class="exp-date">Apr 2025 – Jul 2025</p>
+          <p>Manual testing, bug reporting, and API validation.</p>
         </div>
+
+        <div class="exp-item">
+          <h3>RedSeer | Research Analyst Intern</h3>
+          <p class="exp-date">Oct 2024 – Jan 2025</p>
+          <p>Created Power BI dashboards and optimized workflows.</p>
+        </div>
+
+        <div class="exp-item">
+          <h3>Sabudh Foundation | Data Science Intern</h3>
+          <p class="exp-date">Jul 2024 – Dec 2024</p>
+          <p>Built ML models, automated pipelines, and EDA visualizations.</p>
+        </div>
+      </div>
     </section>
 
     <!-- PROJECTS -->
     <section id="projects" class="section" data-aos="fade-up">
-        <h2>Projects</h2>
-        <div class="project-grid">
-            <div class="project-card">
-                <h3>Wine Quality Prediction</h3>
-                <p>SVC-driven classification model to predict wine quality.</p>
-                <a href="https://github.com/Prem-123Prakash/Wine_Quality_Prediction" target="_blank">GitHub</a>
-            </div>
-            <div class="project-card">
-                <h3>Smart Traffic Management</h3>
-                <p>AI-based vehicle detection system using YOLO & OpenCV.</p>
-                <a href="https://github.com/Prem-123Prakash/Smart_Traffic_Management_System" target="_blank">GitHub</a>
-            </div>
+      <h2>Projects</h2>
+      <div class="project-timeline">
+        <div class="project-item">
+          <h3>Wine Quality Prediction</h3>
+          <p class="project-date">📅 2024</p>
+          <p>
+            SVC-driven classification model to predict wine quality with data
+            preprocessing and model evaluation.
+          </p>
+          <a
+            href="https://github.com/Prem-123Prakash/Wine_Quality_Prediction"
+            target="_blank"
+            >🔗 GitHub</a
+          >
         </div>
+
+        <div class="project-item">
+          <h3>Smart Traffic Management</h3>
+          <p class="project-date">📅 2024</p>
+          <p>
+            AI-based vehicle detection system using YOLO & OpenCV with 95%
+            accuracy for real-time monitoring.
+          </p>
+          <a
+            href="https://github.com/Prem-123Prakash/Smart_Traffic_Management_System"
+            target="_blank"
+            >🔗 GitHub</a
+          >
+        </div>
+      </div>
     </section>
 
     <!-- ACHIEVEMENTS & LEADERSHIP -->
     <section id="achievements" class="section" data-aos="fade-up">
-        <h2>Achievements & Leadership</h2>
-        <ul>
-            <li>EEG Based Mental State Classification</li>
-            <li>EMG Signal Analysis using Residual Network</li>
-            <li>5-Star Python on HackerRank</li>
-            <li>Placement Co-ordinator & Cricket Team Captain</li>
-        </ul>
+      <h2>Achievements & Leadership</h2>
+      <div class="ach-timeline">
+        <div class="ach-item">
+          <h3>EEG Based Mental State Classification</h3>
+          <p class="ach-date">📅 2024</p>
+          <p>
+            Developed a machine learning model for EEG-based brain signal
+            classification.
+          </p>
+        </div>
+
+        <div class="ach-item">
+          <h3>EMG Signal Analysis using Residual Network</h3>
+          <p class="ach-date">📅 2024</p>
+          <p>
+            Applied deep learning for EMG pattern recognition and signal
+            interpretation.
+          </p>
+        </div>
+
+        <div class="ach-item">
+          <h3>5⭐ Python on HackerRank</h3>
+          <p class="ach-date">🏆</p>
+          <p>
+            Recognized for strong coding skills in Python with 5-Star badge.
+          </p>
+        </div>
+
+        <div class="ach-item">
+          <h3>Leadership Roles</h3>
+          <p class="ach-date">🎯</p>
+          <p>
+            Placement Coordinator & Cricket Team Captain, guiding peers and
+            leading events.
+          </p>
+        </div>
+      </div>
     </section>
 
     <!-- CONTACT -->
     <section id="contact" class="section" data-aos="fade-up">
-        <h2>Contact</h2>
-        <p>Email: <a href="mailto:premprakash97237@gmail.com">premprakash97237@gmail.com</a></p>
-        <p>LinkedIn: <a href="https://www.linkedin.com/in/prem-prakash-910a8a244/" target="_blank">View Profile</a></p>
-        <p>GitHub: <a href="https://github.com/Prem-123Prakash" target="_blank">View Projects</a></p>
+      <h2>Contact</h2>
+      <p class="contact-intro">
+        Interested in collaborating or hiring me? Let’s connect 🚀
+      </p>
+
+      <div class="contact-grid">
+        <a
+          href="mailto:premprakash97237@gmail.com"
+          class="contact-card"
+          target="_blank"
+        >
+          <i class="fa-solid fa-envelope"></i>
+          <h3>Email</h3>
+          <p>premprakash97237@gmail.com</p>
+        </a>
+
+        <a
+          href="https://www.linkedin.com/in/prem-prakash-910a8a244/"
+          class="contact-card"
+          target="_blank"
+        >
+          <i class="fa-brands fa-linkedin"></i>
+          <h3>LinkedIn</h3>
+          <p>Connect with me</p>
+        </a>
+
+        <a
+          href="https://github.com/Prem-123Prakash"
+          class="contact-card"
+          target="_blank"
+        >
+          <i class="fa-brands fa-github"></i>
+          <h3>GitHub</h3>
+          <p>View my projects</p>
+        </a>
+      </div>
     </section>
 
     <footer>
-        <p>© 2025 Prem Prakash | All Rights Reserved</p>
+      <p>© 2025 Prem Prakash | All Rights Reserved</p>
     </footer>
 
     <script src="script.js"></script>
     <script>
-        AOS.init();
+      AOS.init();
     </script>
-</body>
+  </body>
 </html>
