--- a/index.html
+++ b/index.html
@@ -150,17 +150,79 @@
     <!-- SKILLS -->
     <section id="skills" class="section" data-aos="fade-up">
       <h2>Skills</h2>
-      <div class="skills-grid">
-        <span>Python</span>
-        <span>Java</span>
-        <span>MySQL</span>
-        <span>Tableau</span>
-        <span>Power BI</span>
-        <span>Machine Learning</span>
-        <span>Deep Learning</span>
-        <span>NLP</span>
-        <span>Django</span>
-        <span>GitHub</span>
+
+      <div class="skills-category">
+        <h3>Programming Languages</h3>
+        <div class="skills-grid">
+          <span>Python</span>
+          <span>Java</span>
+          <span>JavaScript</span>
+        </div>
+      </div>
+
+      <div class="skills-category">
+        <h3>Databases</h3>
+        <div class="skills-grid">
+          <span>MySQL</span>
+        </div>
+      </div>
+
+      <div class="skills-category">
+        <h3>Data Analytics & Visualization</h3>
+        <div class="skills-grid">
+          <span>Tableau</span>
+          <span>Power BI</span>
+          <span>Excel</span>
+        </div>
+      </div>
+
+      <div class="skills-category">
+        <h3>Machine Learning & AI</h3>
+        <div class="skills-grid">
+          <span>Machine Learning</span>
+          <span>Deep Learning</span>
+          <span>NLP</span>
+          <span>Scikit-learn</span>
+          <span>TensorFlow</span>
+          <span>Prompt Engineering</span>
+        </div>
+      </div>
+
+      <div class="skills-category">
+        <h3>Web Development</h3>
+        <div class="skills-grid">
+          <span>HTML</span>
+          <span>CSS</span>
+          <span>Django</span>
+          <span>Shopify</span>
+          <span>WordPress</span>
+        </div>
+      </div>
+
+      <div class="skills-category">
+        <h3>Software Engineering Concepts</h3>
+        <div class="skills-grid">
+          <span>OOPs</span>
+          <span>DBMS</span>
+          <span>Data Structures & Algorithms</span>
+          <span>SDLC</span>
+        </div>
+      </div>
+
+      <div class="skills-category">
+        <h3>Version Control & Collaboration</h3>
+        <div class="skills-grid">
+          <span>Git</span>
+          <span>GitHub</span>
+        </div>
+      </div>
+
+      <div class="skills-category">
+        <h3>Quality Assurance & Tools</h3>
+        <div class="skills-grid">
+          <span>Zoho</span>
+          <span>Postman</span>
+        </div>
       </div>
     </section>
 
