Updated portfolio with enhanced hamburger menu and styling

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
           <h1>Prem Prakash</h1>
           <h3><span id="typed"></span></h3>
           <p>
-            I’m Prem Prakash, a passionate B.Tech Computer Science & Engineering
-            (Data Science) student at Haldia Institute of Technology with a
+            I’m Prem Prakash, a B.Tech Computer Science & Engineering
+            (Data Science) graduate from Haldia Institute of Technology with a
             proven track record in Software Development, Artificial
             Intelligence, Machine Learning, and Business Intelligence. My
             journey blends academic excellence (CGPA 8.94) with hands-on
