Updated phone, chat, whatsapp and smooth scroll

--- a/index.html
+++ b/index.html
@@ -371,11 +371,11 @@
 
     <!-- Mobile-only Floating Contact Buttons -->
     <div class="mobile-floating-contact">
-      <a href="tel:+911234567890" class="contact-btn">
+      <a href="tel:+916204339367" class="contact-btn">
         <i class="fa-solid fa-phone"></i>
         <span>Phone</span>
       </a>
-      <a href="https://wa.me/911234567890" class="contact-btn" target="_blank">
+      <a href="https://wa.me/+916204339367" class="contact-btn" target="_blank">
         <i class="fa-brands fa-whatsapp"></i>
         <span>WhatsApp</span>
       </a>
